--- a/src/Components/DiamondFilter/_filter.scss
+++ b/src/Components/DiamondFilter/_filter.scss
@@ -1,5 +1,5 @@
 .filter {
-    width: 100vw;
-    display: flex;
-    justify-content: space-around;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px 0;
 }
